gifに正しく変更できていなかったので修正

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,8 @@
             <script src="static/javascript/answer.js"></script>-->
         </div>
         
-        <video src="static/video/SORA1.mp4" loop autoplay muted></video>
+        <!-- <video src="static/video/SORA1.gif" loop autoplay muted></video> -->
+        <img src="static/video/SORA1.gif"></img>
 
         <!-- <img src="img/S__11321365.jpg"></img> -->
     </div>
